--- a/app/src/main/res/layout-sw600dp/recipe_step_detail_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_step_detail_fragment.xml
@@ -20,8 +20,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.4"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/step_image_view"
+            android:scaleType="fitCenter"
+            android:visibility="gone"/>
+
         <TextView
             android:id="@+id/step_short_description"
             android:layout_width="match_parent"
