--- a/app/src/main/res/layout/recipe_detail_item.xml
+++ b/app/src/main/res/layout/recipe_detail_item.xml
@@ -8,12 +8,27 @@
     app:cardCornerRadius="5dp"
     app:cardUseCompatPadding="true">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:id="@+id/recipe_detail_text"
-        android:textColor="@color/colorBlack"
-        android:padding="5dp"
-        android:layout_margin="5dp"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/recipe_detail_imageview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_weight="0.25"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            android:textSize="25sp"
+            android:id="@+id/recipe_detail_text"
+            android:textColor="@color/colorBlack"
+            android:padding="5dp"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
