--- a/app/src/main/res/layout/recipe_step_detail_fragment.xml
+++ b/app/src/main/res/layout/recipe_step_detail_fragment.xml
@@ -20,6 +20,13 @@
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/step_image_view"
+            android:scaleType="fitCenter"
+            android:visibility="gone"/>
+
         <TextView
             android:id="@+id/step_short_description"
             android:layout_width="match_parent"
